Youtube size, copy updated
Youtube size was updated for better phone viewing. Copy was updated.

--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
             <div class="about__content-details">
               <p class="about__content-details-para">
                 I'm a <strong>Technical Program Manager</strong> and a <strong> Full Stack Web Developer </strong> located in
-                Los Angeles. I established <strong>Incident Management</strong> and <strong>Release Management</strong> programs for Netflix Games Studio, as well as lead the <strong>Shortform Innovation</strong> for Netflix Creative Production. As a full stack web developer, I build, test, and deploy web applications using the <strong>MERN stack</strong>. 
+                Los Angeles. I established <strong>Incident Management</strong> and <strong>Release Management</strong> programs for Netflix Games Studio. As a full stack web developer, I build, test, and deploy web applications using the <strong>MERN stack</strong>. 
               </p>
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/W_E8Sx5YbXo?si=pBLnYRxnP3MGfkTI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <iframe width="480" height="270" src="https://www.youtube.com/embed/W_E8Sx5YbXo?si=pBLnYRxnP3MGfkTI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
            
             </div>
             
